test/valid/56332_if_then_else_printing_string/if_then_else_printing_string.agu
-- Author: 56332, Student Ricardo Sobral

let sinal (n) : Int -> Bool = n >= 0

let main(_) : Unit -> Unit = print(sinal(0))