test/invalid-semantic/56332_wrong_return_type/wrong_return_type.agu
-- Author: 56332, Student Ricardo Sobral
let retornaUnit (_) : Int -> Unit = print("olá")
let x : Int = retornaUnit(5)
